--- a/doc-High_Availability_Guide/topics/HAProxy.adoc
+++ b/doc-High_Availability_Guide/topics/HAProxy.adoc
@@ -7,9 +7,9 @@ After configuring the appliances as described in xref:installation[], configure 
 
 The following steps highlight the configuration requirements for the load balancer, which in this case is HAProxy. The load balancer is assigned a Virtual IP for the {product-title_short} user interface and is pointed to one of the many {product-title_short} appliances behind the load balancer in a round robin fashion.
 
-Additionally, to avoid the HAProxy server being a single point of failure, two redundant HAProxy servers are configured in active-passive mode. The failover is orchestrated by using Keepalived. Keepalived monitors the health of the active load balancer and in case of a failure, the Virtual IP is failed over to the passive load balancer, which then becomes active. The Virtual IP is configured by Keepalived.
+Additionally, to avoid the HAProxy server being a single point of failure, two redundant HAProxy servers are configured in active-passive mode. The failover is orchestrated by using the `keepalived` daemon. `keepalived` monitors the health of the active load balancer and in case of a failure, the Virtual IP is failed over to the passive load balancer, which then becomes active. The Virtual IP is configured by`keepalived`.
 
-The Virtual IP is the single IP address that is used as the point of access to the {product-title_short} web UI appliances and is configured in the HAProxy configuration along with a load balancer profile. When an end user accesses the Virtual IP, it directs traffic to the appropriate {product-title_short} appliance based on the configured HAProxy policy.
+The Virtual IP is the single IP address that is used as the point of access to the {product-title_short} appliance user interfaces and is configured in the HAProxy configuration along with a load balancer profile. When an end user accesses the Virtual IP, it directs traffic to the appropriate {product-title_short} appliance based on the configured HAProxy policy.
 
 
 [NOTE]
@@ -17,11 +17,11 @@ The Virtual IP is the single IP address that is used as the point of access to t
 Additional configuration is required to run HAProxy on Red Hat OpenStack Platform. See the https://access.redhat.com/documentation/en/red-hat-openstack-platform/10/single/networking-guide/[OpenStack Networking Guide] for more information.
 ====
 
-This configuration uses two HAProxy servers and a Virtual IP (configured by Keepalived). The following example procedure uses the following IP addresses and names; substitute values for your environment as needed:
+This configuration uses two HAProxy servers and a Virtual IP (configured by `keepalived`). The following example procedure uses the following IP addresses and names; substitute values for your environment as needed:
 
 * HAProxy1: 10.19.137.131 (cf-hap1.example.com)
 * HAProxy2: 10.19.137.132 (cf-hap2.example.com)
-* Virtual IP (to be configured by keepalived): 10.19.137.135 (cf-ha.example.com)
+* Virtual IP (to be configured by `keepalived`): 10.19.137.135 (cf-ha.example.com)
 
 // INSERT edited architecture image
 
@@ -61,7 +61,7 @@ Enabled: 1
 +
 [NOTE]
 ====
-Keepalived uses VRRP (Virtual Redundancy Router Protocol) to monitor the servers and determine which node is the master and which node is the backup. VRRP communication between routers uses multicast IPv4 address 224.0.0.18 and IP protocol number 112.
+`keepalived` uses VRRP (Virtual Redundancy Router Protocol) to monitor the servers and determine which node is the master and which node is the backup. VRRP communication between routers uses multicast IPv4 address 224.0.0.18 and IP protocol number 112.
 ====
 +
 ------
@@ -80,7 +80,7 @@ Keepalived uses VRRP (Virtual Redundancy Router Protocol) to monitor the servers
 [root@cf-hap2~]# firewall-cmd --reload
 ------
 +
-. Install and configure Keepalived on both servers.
+. Install and configure `keepalived` on both servers.
 .. On the `cf-hap1` server, run the following:
 +
 ------
@@ -131,7 +131,7 @@ chk_haproxy
 }
 ------
 +
-.. On both servers, configure IP forwarding and non-local binding by appending the following to the `sysctl.conf` file. In order for the Keepalived service to forward network packets properly to the real servers, each router node must have IP forwarding turned on in the kernel.
+.. On both servers, configure IP forwarding and non-local binding by appending the following to the `sysctl.conf` file. In order for the `keepalived` service to forward network packets properly to the real servers, each router node must have IP forwarding turned on in the kernel.
 On the `cf-hap1` server, run the following:
 +
 ------
@@ -206,7 +206,7 @@ defaults
     timeout server          1m
     timeout http-keep-alive     10s
     timeout check           10s
-# Cloud Forms Management UI URL
+# CloudForms Management UI URL
 listen apache
   bind 10.19.137.135:80
   mode tcp
