--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -1,15 +1,20 @@
 [[ha_roles]]
 == Scaling a Highly Available {product-title_short} Environment
 
-After configuring the database-only appliances, the {product-title_short} appliances, and the HAProxy load balancer, you can configure additional worker appliances as needed.
+After configuring the database-only appliances, the {product-title_short} appliances, and the HAProxy load balancer, you can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[] and assign server roles. The {product-title_short} appliances and roles can be configured in any order.
 
 .Considerations
 
-* UI zone
+* User interface (UI) zone
 * Management zone (for providers)
 * Database Operations zone
 
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#regions[Regions] and  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#servers[Servers] in  _General Configuration_ for more information on configuring servers and roles.
+
+
+The following diagram shows an example of a highly available database configuration with worker appliances configured:
+
+*[INSERT DIAGRAM]*
 
 ////
 
