--- a/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
@@ -878,6 +878,101 @@ The following table lists the appliance's main services and their respective por
 
 |===
 
+
+.OpenShift Container Platform Ports Used by CloudForms Management Engine
+[cols="1,1,1,1,1,1", frame="all", options="header"]
+|===
+|
+
+                            Initiator (CFME Role if applicable)
+
+
+|
+
+                            Receiver (CFME Role if applicable)
+
+
+|
+
+                            Application
+
+
+|
+
+                            TCP Port
+
+
+|
+
+                            UDP Port
+
+
+|
+
+                            Purpose
+
+
+|
+
+                            CFME Appliance
+
+
+|
+
+                            OpenShift Master (or Load Balancer)
+
+
+|
+
+                            HTTPS
+
+
+|
+
+                            8443
+
+
+|
+
+
+
+|
+
+			                 Communication from CFME Appliance to OpenShift API
+                       
+                       
+                       |
+
+                                                   CFME Appliance
+
+
+                       |
+
+                                                   OpenShift Routers (or Load Balancer)
+
+
+                       |
+
+                                                   HTTPS
+
+
+                       |
+
+                                                   443
+
+
+                       |
+
+
+
+                       |
+
+                       			                 Communication from CFME Appliance to OpenShift Services (metrics, etc.)
+                       
+
+|===
+
+
 .VMware vSphere Ports Used by {product-title}
 [cols="1,1,1,1,1,1", frame="all", options="header"]
 |===
@@ -934,7 +1029,7 @@ The following table lists the appliance's main services and their respective por
 |
 |
 
-                            CFME appliance running any of these roles will initiate communication with vCenter on this port.
+                            CFME appliance running any of these roles will initiate communication with vCenter on this port
 
 
 
@@ -972,7 +1067,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            ESX Hosts(if analyzing VMs through Host)
+                            ESX Hosts (if analyzing VMs through host)
 
 
 |
@@ -988,8 +1083,7 @@ The following table lists the appliance's main services and their respective por
 |
 |
 
-                            Communication from CFME appliance to Hosts.
-
+                            Communication from CFME appliance to hosts
 
 
 |
@@ -1015,7 +1109,7 @@ The following table lists the appliance's main services and their respective por
 |
 |
 
-                            Communication from CFME appliance to vCenters.
+                            Communication from CFME appliance to vCenters
 
 
 
@@ -1662,6 +1756,9 @@ The following table lists the appliance's main services and their respective por
 			                 Communication from CFME Appliance to Google Cloud Platform resources
 
 |===
+
+
+
 
 IMPORTANT: To provide your {product-title} infrastructure with an extra layer of security, use a network layer firewall to restrict port access.
 
