--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -75,5 +75,5 @@ In environments that use Keystone v3 authentication, the user must have the *adm
 ====
  * To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
 Hence, the OpenStack adminURL endpoint should be assigned an IP address other than `192.168.x.x`. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
-* Collecting capacity and utilization data from an OpenStack cloud provider requires selecting the *Collect for All Clusters* option under *Configuration*, in the settings menu. For information, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#capacity-and-utilization-collections[Capacity and Utilization Collections] in the _General Configuration_ guide.
+* Collecting capacity and utilization data from an OpenStack cloud provider requires selecting the *Collect for All Clusters* option under *Configuration*, in the settings menu. For information, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#capacity-and-utilization-collections[Capacity and Utilization Collections] in the _General Configuration Guide_.
 ====  
