--- a/common/create-playbook-service-catalog-item.adoc
+++ b/common/create-playbook-service-catalog-item.adoc
@@ -30,7 +30,7 @@
 .. Add *Cloud* or *Network Credentials* from the drop-down lists. 
 .. Choose the *Host* against which to run the service item. 
 .. Use the *Escalate Privilege* toggle switch to enable user privilege escalation if called for in credentials during the playbook run. 
-.. Choose a *Verbosity* value to set the debug level for playbook execution. Higher values provide more detailed output. 
+.. Choose a *Verbosity* value to set the debug level for playbook execution. 
 .. Add key value pairs for *Variables* and their corresponding *Default Values*. 
 .. In the *Dialog* options, choose an existing dialog from the *Use Existing* drop-down list or select *Create New* to add a new dialog.
 . Click *Add*.
