--- a/auth/active_directory.adoc
+++ b/auth/active_directory.adoc
@@ -77,6 +77,8 @@ Password for user: xxxxxxxx
 
 Update the */etc/sssd/sssd.conf* file as follows:
 
+*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provided the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
+
 ----
     [domain/example.com]
     ad_domain = example.com
@@ -90,7 +92,7 @@ Update the */etc/sssd/sssd.conf* file as follows:
     use_fully_qualified_names = True
     fallback_homedir = /home/%d/%u
     access_provider = ad
-=>  ldap_user_extra_attrs = mail, givenname, sn, displayname
+=>  ldap_user_extra_attrs = mail, givenname, sn, displayname, domainname
    
 =>  [sssd]
 =>  domains = example.com
@@ -107,7 +109,7 @@ Update the */etc/sssd/sssd.conf* file as follows:
 =>  [ifp]
 =>  default_domain_suffix = example.com
 =>  allowed_uids = apache, root
-=>  user_attributes = +mail, +givenname, +sn, +displayname
+=>  user_attributes = +mail, +givenname, +sn, +displayname, +domainname
 ----
 
 [[configure-apache]]
