--- a/doc-Scripting_Actions/topics/chap_automation_model.adoc
+++ b/doc-Scripting_Actions/topics/chap_automation_model.adoc
@@ -104,6 +104,15 @@ allows you to see the results in tree and XML view.
 
 include::To_simulate_an_Automate_Model1.adoc[]
 
+[[generic-objects]]
+=== Generic Objects
+
+Generic objects are object-line entities, defined at runtime, that have unique names and user-defined attributes and relationships. Residing in the Automate Engine datastore, generic objects are designed to manage objects other than those related to private infrastructure, and public or private cloud providers. 
+
+Using automate requests, services and catalog items, generic objects can be directly accessed or passed, during any step, as a parameter to a service state machine. As a result, generic objects can be used to quickly add the capability to provision and collect data on resources not supported by {product-title}.
+
+include::To_view_generic_objects.adoc[]
+
 [[importing-exporting-and-resetting-the-datastore]]
 === Importing, Exporting, and Resetting the Datastore
 
