--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -5,17 +5,24 @@ After creating high availability for the database tier and the user interface ti
 
 You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[] and assign server roles. The {product-title_short} appliances and roles can be configured in any order.
 
+/////
 .Considerations
 
 * User interface (UI) zone
 * Management zone (for providers)
 * Database Operations zone
 
-See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#regions[Regions] and  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#servers[Servers] in  _General Configuration_ for more information on configuring servers and roles.
-
+/////
 
 The following diagram shows an example of a highly available database configuration with worker appliances configured:
 image:CloudForms_HA_Architecture_431939_0817_ECE-02.png[] 
+
+
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#regions[Regions] and  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#servers[Servers] in  _General Configuration_ for more information on configuring servers and roles.
+
+See https://access.redhat.com/documentation/en-us/reference_architectures/2017/html/deploying_cloudforms_at_scale/[Deploying CloudForms at Scale] for further recommendations on scaling your {product-title_short} environment.
+
+
 
 ////
 
