Fix typo "will provided" to "will provide"

--- a/auth/active_directory.adoc
+++ b/auth/active_directory.adoc
@@ -77,7 +77,7 @@ Password for user: xxxxxxxx
 
 Update the */etc/sssd/sssd.conf* file as follows:
 
-*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provided the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
+*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provide the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
 
 ----
     [domain/example.com]
