--- a/auth/ipa_ad_trust.adoc
+++ b/auth/ipa_ad_trust.adoc
@@ -39,7 +39,7 @@ The SSSD configuration file on the IPA Server must be updated to list needed use
 
 Add the following entry to the SSSD configuration file /etc/sssd/sssd.conf
 
-*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provided the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
+*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provide the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
 
 ```bash
 [ifp]
