--- a/auth/ldap.adoc
+++ b/auth/ldap.adoc
@@ -103,7 +103,7 @@ Configure SSSD based authentication against LDAP via SSL:
 Edit the different sections in */etc/sssd/sssd.conf* for the Appliance as in the following
 example, customizing the main *[domain/example.com]* section for the particular Ldap installation.
 
-*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provided the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
+*Note*: Starting with SSSD version 1.15.2, which will be available in CentOS version 7.4, SSSD will provide the domain name as a user attribute. The below examples show how to set _ldap_user_extra_attrs_ and _user_attributes_ to take advantage of this new feature. If running an appliance built with CentOS version prior to CentOS 7.4 do not include _domainname_ for these attributes.
 
 ----
 =>  [domain/example.com]
