--- a/doc-High_Availability_Guide/topics/Database_Failover.adoc
+++ b/doc-High_Availability_Guide/topics/Database_Failover.adoc
@@ -57,6 +57,43 @@ Upon database server failover, the standby server becomes the primary. However, 
 
 Manual steps are required to reintroduce the failed primary database node back into the cluster as a standby. This allows for greater control over the configuration, and to diagnose the failure.
 
-To reintroduce the failed node, reinitialize the standby database as described in xref:configuring_standby_db[].
+To reintroduce the failed node, reinitialize the standby database.
+On the standby database-only appliance, configure the following:
+
+. In the appliance console menu, select *Configure Database Replication*. 
+. Select *Configure Server as Standby*.
+. Select `y` to remove all previous data from the server and configure it as a new standby database.
+. Set a unique identifier number for the standby server and enter the database name and credentials:
+.. Select a number to uniquely identify the node in the replication cluster. This number can be the same as the node's original identification number.
+.. Enter the cluster database name.
+.. Enter the cluster database username.
+.. Enter the cluster database password.
+.. Enter the new primary database-only appliance hostname or IP address.
+.. Enter the new standby database-only appliance hostname or IP address.
++
+[NOTE]
+====
+The hostname must be visible to all appliances that communicate with this database, including the engine appliances and any global region databases.
+====
++
+.. Select `y` to configure the replication manager for automatic failover.
++
+[NOTE]
+====
+If re-using the node's identification number, select `y` to overwrite the existing node ID (this cannot be undone). Additionally, select `y` to overwrite and reconfigure the replication settings in `/etc/repmgr.conf` when prompted.
+====
++
+.. Confirm that the replication standby server configuration details are correct, and select `y` to apply the configuration.
+
+
+The standby server will then run an initial synchronization with the primary database, and start locally in standby mode.
+
+Verify the configuration on the appliance console details screen for the standby server. When configured successfully, *Local Database Server* shows as `running (standby)`. 
+
+
+
+
+
+
 
 Your {product-title_short} environment is now re-configured for high availability.
