--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -3,7 +3,9 @@
 . Enter a *Name* for the provider.
 . From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
-. Under *Endpoints* in the *Default* tab, configure the following for the OpenShift provider: 
+. From the *Alerts* dropdown list, specify if you want to enable alerts by selecting *Prometheus*, or leave as *Disabled* for no alerts configuration. This adds a new *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
+. From the *Metrics* dropdown list, specify your metrics service by selecting *Hawkular* or *Prometheus*, or leave as *Disabled* for no metrics configuration. This adds a new *Metrics* tab to the lower pane to configure the Prometheus service. Metrics are disabled by default.
+. In the *Default* tab, configure the following for the OpenShift provider: 
 .. Select a *Security Protocol* method to specify how to authenticate the provider:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
@@ -32,8 +34,8 @@ The *Hostname* must use a unique fully qualified domain name.
 .. Enter the OpenShift management token in the *Token* field. This is the token obtained earlier in xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
 .. Enter the same token in the *Confirm Token* field.
 .. Click *Validate* to confirm that {product-title} can connect to the OpenShift Container Platform provider.
-. Under *Endpoints* in the *Hawkular* tab, configure the following for Hawkular capacity and utilization metrics collection:
-.. Select a *Security Protocol* method to specify how to authenticate the provider:
+. If you selected a capacity and utilization metrics service, configure the metrics endpoints in the *Metrics* tab:
+.. Select a *Security Protocol* method to specify how to authenticate the service:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
 +
@@ -45,9 +47,17 @@ In OpenShift, the default deployment of the router generates certificates during
 ====
 +
 * *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
-.. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider. If using Hawkular metrics, you can use the *Detect* button to find the hostname.
 .. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
-.. Click *Validate* to confirm that {product-title} can connect to the Hawkular endpoint.
+.. Click *Validate* to confirm that {product-title} can connect to the metrics endpoint.
+. If you selected Prometheus alerts service, configure the alerts endpoints in the *Alerts* tab:
+.. Select a *Security Protocol* method to specify how to authenticate the service:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
+* *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider. 
+.. Enter the *API Port* if your Prometheus provider uses a non-standard port for access. The default port is `443`.
+.. Click *Validate* to confirm that {product-title} can connect to the alerts service.
 . Click *Add*.
 
 
